fix: project buttons on mobile view

--- a/src/app/modules/projects-view/projects-view.component.sass
+++ b/src/app/modules/projects-view/projects-view.component.sass
@@ -58,5 +58,6 @@
     .project-video-text
         width: 90%
 
+
     .project-video-button
-        width: 90%
+        flex-direction: column-reverse
